# jcmf

./: .gitignore  README.md  build.xml
.ipynb_checkpoints/: cmcluster-checkpoint.ipynb
cmfinder/: .gitignore  configure.ac  git-version  package.pl
cmfinder/cmfinder03/: cmfinder
cmfinder/cmfinder04/: base_pair_prediction.c  cmfinder.c  cmfinder.h
cmfinder/hmmpair/: GSCConsensus.h  QueueWithFindMin.h  hmmpair.h
cmfinder/nbproject/: configurations.xml  project.properties  project.xml
cmfinder/pfold-extras/: addparen  col2fasta  col2newick  col2psalign  col2txtalign  drawdot  drawphyl  extendstem  findphyl  mltree  newick2col  nohead  scfg  stdpair
cmfinder/user-manual/: user-manual.tex
data/: m100_chr1_149844498-149849024.maf  test-reversedblocks.maf  test-scaffold.maf  test-wrongchrom.maf  test-wrongstrand.maf  toy.maf
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
nbproject/private/: private.properties  private.xml
notes/: RNA Motifs Process Notes.txt  cmcluster.ipynb  getJars.sh  jars.sh  meeting-notes.txt  presentation.pptx  sorted.bb  sorted.bed  thresholding.ipynb
notes/.ipynb_checkpoints/: cmcluster-checkpoint.ipynb
notes/data/: multi.bed  single.bed
notes/misc/: ss.html  (+2 more)
notes/scripts/utilities/multiperm-0.9.4/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  alignment_block.cpp  alignment_block.h  base_file.h  chi_square.cpp  chi_square.h  clustalw_file.cpp  clustalw_file.h  config.h  config.h.in  config.status  configure  configure.ac  maf_file.cpp  maf_file.h  main.cpp  mt19937ar.h  multiperm  multiperm.cpp  multiperm.h  options.cpp  options.h  our_shuffle.cpp  our_shuffle.h  prng.cpp  prng.h  rnaz_random_shuffle.cpp  rnaz_random_shuffle.h  sequence.cpp  sequence.h  shuffling_score.cpp  shuffling_score.h
notes/scripts/utilities/multiperm-0.9.4/.deps/: multiperm-alignment_block.Po  multiperm-chi_square.Po  multiperm-clustalw_file.Po  multiperm-maf_file.Po  multiperm-main.Po  multiperm-mt19937ar.Po  multiperm-multiperm.Po  multiperm-options.Po  multiperm-our_shuffle.Po  multiperm-prng.Po  multiperm-rnaz_random_shuffle.Po  multiperm-sequence.Po  multiperm-shuffling_score.Po
output/: PQ2P0.gexf  PQ2P1.gexf  PQ2P2.gexf  PQ2P3.gexf  PQ2P4.gexf  PQAV0.gexf  PQAV1.gexf  PQAV2.gexf  PQAV3.gexf  PQAV4.gexf  PQPN0.gexf  PQPN1.gexf  PQPN2.gexf  PQPN3.gexf  PQPN4.gexf  Po2P0.gexf  Po2P1.gexf  Po2P2.gexf  Po2P3.gexf  Po2P4.gexf  PoAV0.gexf  PoAV1.gexf  PoAV2.gexf  PoAV3.gexf  PoAV4.gexf  PoPN0.gexf  PoPN1.gexf  PoPN2.gexf  PoPN3.gexf  PoPN4.gexf  c2.maf  cmarray  graphs.gephi  matrix.tsv  test_1.fasta
scripts/: 01split.sh  03score.sh  04listscores.sh  align.sh
(+2428 files in other folders)
